# OptimizedDataIngestion

./: CMakeLists.txt  README.md
benchmarks/: ingestion_benchmark.cpp
include/ingestion/: config.hpp  data_ingestion.hpp  memory_pool.hpp
mock_server/: mock_server.cpp
src/: config.cpp  data_ingestion.cpp  main.cpp
